# sel4-app-helloworld

./: CMakeLists.txt  Kbuild  Kconfig  Makefile
configs/: helloworld_x86_defconfig
src/: main.c
